# PalOps

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.direct.yaml  design-qa.md  pyproject.toml
docs/: install.md
scripts/: run-macos.sh
src/paledit/: __init__.py  api.py  backup_diff.py  backups.py  box_editor.py  box_job.py  box_plan.py  chat.py  cli.py  compat.py  items.py  map.py  map_labels.py  metrics_history.py  models.py  pal_clone.py  pals.py  parser.py  remote.py  save.py  settings.py  skills.py  world.py
src/paledit/data/: items_zh_cn.json  pals_zh_cn.json  skills_zh_cn.json
src/paledit/static/: BRAND_ASSET_NOTICE.txt  app.js  index.html  map.css  style.css
src/paledit/static/catalog/: THIRD_PARTY_NOTICE.txt
src/paledit/static/map/: THIRD_PARTY_NOTICE.txt
tests/: test_backup_diff.py  test_backups.py  test_box_job.py  test_box_plan.py  test_catalog_assets.py  test_chat.py  test_compat.py  test_guilds.py  test_items.py  test_map.py  test_metrics_history.py  test_pal_clone.py  test_pal_details.py  test_pals.py  test_parser_integration.py  test_parser_scanner.py  test_remote.py  test_save.py  test_server_latency.py  test_settings.py  test_skills.py  test_snapshot_cache.py  test_world.py  test_world_ui_readonly.py
tools/: sync_pst_catalog.py  update_item_index.py  update_pal_index.py  update_skill_ranks.py
